# object_detection_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: ObjectDesc.msg  ObjectDescArray.msg
