<?xml version="1.0"?>
<package format="3">
  <name>object_detection_msgs</name>
  <version>1.3.0</version>
  <description>Custom object detection msgs</description>
  <maintainer email="horton.rscott@gmail.com">Scott Horton</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
